feat: add user avatar and logout
