# backend/api/openapi.yml
@@ -11,8 +11,12 @@ paths:
     get:
       summary: Check authentication status
       responses:
-        "204":
-          description: Authenticated
+        "200":
+          description: Authenticated user
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
         "401":
           description: Not authenticated
   /auth/register:
@@ -229,3 +233,18 @@ components:
           type: integer
         year:
           type: integer
+    User:
+      type: object
+      required: 
+        - id
+        - email
+        - createdAt
+      properties:
+        id:
+          type: string
+          format: uuid
+        email:
+          type: string
+        createdAt:
+          type: string
+          
